HTS-164: Started implementation of SSL app.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,6 +69,14 @@ application.global= uk.gov.hmrc.helptosave.MicroserviceGlobal
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 application.router = prod.Routes
 
+play {
+  ws {
+    timeout.request = 70000
+    ssl {
+
+    }
+  }
+}
 
 # Controller
 # ~~~~~
